Open College Project MD 파일 수정

--- a/templates/introduce.html
+++ b/templates/introduce.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>류은진님의 홈페이지</title>
 </head>
 <body>
+안녕하세요! 저는 류은진입니다 :D :D :D
+저는 {{address}}에서 살고 있습니다.
+
+# /profile?address=잠원
 
 </body>
 </html>
